--- a/requirements.txt
+++ b/requirements.txt
@@ -1,80 +1,2 @@
-aiohttp==3.8.5
-aiosignal==1.3.1
-amqp==5.1.1
-anyio==3.6.2
-async-timeout==4.0.3
-attrs==23.1.0
-beautifulsoup4==4.11.1
-billiard==4.1.0
-celery==5.3.1
-certifi==2022.6.15
-cffi==1.15.1
-charset-normalizer==2.1.1
-click==8.1.3
-click-didyoumean==0.3.0
-click-plugins==1.1.1
-click-repl==0.3.0
-colorama==0.4.4
-cryptography==41.0.3
-distlib==0.3.4
-dnspython==2.3.0
-email-validator==1.3.0
-exceptiongroup==1.1.3
-fastapi==0.89.1
-filelock==3.7.0
-Flask==2.1.2
-Flask-MySQLdb==1.0.1
-frozenlist==1.4.0
-h11==0.14.0
-httpcore==0.16.3
-httptools==0.5.0
-httpx==0.23.3
-idna==3.3
-iniconfig==2.0.0
-itsdangerous==2.1.2
-Jinja2==3.1.2
-kombu==5.3.1
-MarkupSafe==2.1.1
-multidict==6.0.4
-mysqlclient==2.1.1
-orjson==3.8.5
-packaging==23.1
-pika==1.3.2
-Pillow==9.2.0
-platformdirs==2.5.2
-playsound==1.2.2
-pluggy==1.3.0
-prompt-toolkit==3.0.39
-psycopg2==2.9.5
-pycparser==2.21
-pydantic==1.10.4
-PyJWT==2.8.0
-pymongo==4.1.1
-pytest==7.4.1
-python-barcode==0.14.0
-python-dateutil==2.8.2
-python-dotenv==0.21.0
-python-multipart==0.0.5
-PyYAML==6.0
-pyzbar==0.1.9
-requests==2.28.1
-rfc3986==1.5.0
-six==1.16.0
-sniffio==1.3.0
-soupsieve==2.3.2.post1
-starlette==0.22.0
-tomli==2.0.1
-typing_extensions==4.4.0
-tzdata==2023.3
-ujson==5.7.0
-unicorn==2.0.1.post1
-urllib3==1.26.12
-uvicorn==0.20.0
-vboxapi==1.0
-vine==5.0.0
-virtualenv==20.14.1
-watchfiles==0.18.1
-wcwidth==0.2.6
-websockets==10.4
-Werkzeug==2.1.2
-yarl==1.9.2
+flask
+pytest
